force-app/main/default/objects/Calculadora__c/Calculadora__c.object-meta.xml
<CustomObject>
    <label>Calculadora</label>
    <nameField>
        <label>Calculadora Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculadoras</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>