force-app/main/default/objects/Calculadora__c/fields/Operador__c.field-meta.xml
<CustomField>
    <fullName>Operador__c</fullName>
    <label>Operador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suma</fullName>
            </value>
            <value>
                <fullName>Resta</fullName>
            </value>
            <value>
                <fullName>Multiplicacion</fullName>
            </value>
            <value>
                <fullName>Divicion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>