force-app/main/default/objects/Calculadora__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <formula>CASE( Operador__c , &quot;Suma&quot;, Valor1__c + Valor2__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resultado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>