force-app/main/default/objects/Calculadora__c/fields/Valor1__c.field-meta.xml
<CustomField>
    <fullName>Valor1__c</fullName>
    <label>Valor1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>