force-app/main/default/objects/Calculadora__c/fields/Valor2__c.field-meta.xml
<CustomField>
    <fullName>Valor2__c</fullName>
    <label>Valor2</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>