force-app/main/default/objects/Calculadora__c/validationRules/Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Error</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(TEXT(Operador__c )  = &quot;Divicion&quot;,Valor2__c =0 ),true,false)</errorConditionFormula>
    <errorMessage>No se puede dividir por 0</errorMessage>
</ValidationRule>